# RivGraph

./: .buildinfo  .coveragerc  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  LICENSE.txt  README.md  classes.py  delta_example.py.ipynb  environment.yml  genindex.html  geo_utils.py  im_utils.py  index.html  ln_utils.py  mask_to_graph.py  objects.inv  paper.bib  paper.md  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  walk.py  zenodo.json
_modules/: index.html
_sources/: index.rst.txt
apiref/: deltas.html  index.html  rivers.html  rivgraph.html
background/: index.html
contributing/: index.html
docs/: Makefile  conf.py  index.rst  make.bat  masks.md
examples/: braided_river_example.ipynb  delta_example.ipynb  delta_example.py.ipynb  index.html  mouse_brain.ipynb
featuredevelopment/: index.html
gallery/: dong2022.html  example.html  hariharan2022.html  index.html  knights2020.html  knights2023.html  konkol2022.html  tejedor2022.html
gallery_source/: README.html
install/: index.html
issues/: index.html
linksnodes/: index.html
maskmaking/: index.html
quickstart/: index.html
rivgraph/: __init__.py  _plotting_metrics.py  classes.py  dev-lakes.py  directionality.py  geo_utils.py  im_utils.py  io_utils.py  lake_utils.py  ln_utils.py  mask_to_graph.py  mask_utils.py  ordered_set.py  rivgraph.py  walk.py
shoreline/: index.html
tests/: conftest.py  pathtest.py  test_classes.py  test_delta.py  test_directionality.py  test_errors.py  test_geo_utils.py  test_im_utils.py  test_ln_utils.py  test_river.py  (+6 more)
(+298 files in other folders)
